--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,10 @@ dependencies {
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    runtimeOnly 'com.mysql:mysql-connector-j'
+    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+    implementation group: 'org.mybatis', name: 'mybatis', version: '3.5.6'
 }
 
 tasks.named('test') {
