--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3308/tTest
+spring.datasource.username=root
+spring.datasource.password=root123
 
+mybatis.mapper-locations=mappers/**/*.xml
+mybatis.type-aliases-package=com.toy.howaboutit
